# shai

./: .env.example  README.md  pyproject.toml
shai/: chain.py  exec.py  llm.py  main.py  prompt.py
