[tool.poetry]
name = "shai"
version = "0.1.0"
description = ""
authors = ["Navicstein <navicsteinrotciv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
rich = "^13.7.1"
litellm = "^1.34.16"
langchain = "^0.1.13"
setuptools = "^69.2.0"
typer = { extras = ["all"], version = "^0.12.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
shai = "shai.main:app"
